[package]
name = "reg_match"
description = "A match style regex tool."
version.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license-file.workspace = true

[dependencies]
regex = { workspace = true }
reg_match_macro = { path = "../reg_match_macro" ,version = "=0.1.0" }

[dev-dependencies]
trybuild = "1.0.101"
